--- a/trafficSpeedControl/InterstateCarRegistryService/src/main/resources/application.properties
+++ b/trafficSpeedControl/InterstateCarRegistryService/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.kafka.producer.value-serializer= org.springframework.kafka.support.serial
 spring.kafka.consumer.properties.spring.json.trusted.packages=kafka,kafka.entities
 
 app.topic.tofasttopic= tofasttopic
-app.topic.ownertopic= ownertopic
+app.topic.feetopic= feetopic
 
-logging.level.root= ERROR
-org.springframework= ERROR
+logging.level.root= INFO
+org.springframework= INFO
