--- a/trafficSpeedControl/InterstateSpeedService/src/main/resources/application.properties
+++ b/trafficSpeedControl/InterstateSpeedService/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=kafka,kafka.entiti
 
 app.topic.tofasttopic= tofasttopic
 
-logging.level.root= ERROR
-org.springframework= ERROR
+app.speedlimit=72
+
+logging.level.root= INFO
+org.springframework= INFO
